--- a/Volume/CMakeLists.txt
+++ b/Volume/CMakeLists.txt
@@ -1,7 +1,14 @@
+cmake_minimum_required(VERSION 2.8.8)
+project(vtkVolume)
 
-set(_headers vtkCubic.h GLSLShader.h vtkSinglePassSimpleVolumeMapper.h vtkTransferControlPoint.h
+find_package(GLEW REQUIRED)
+
+vtk_add_to_module_search_path(${vtkVolume_SOURCE_DIR} ${vtkVolume_BINARY_DIR})
+set(vtkVolume_HEADERS vtkCubic.h GLSLShader.h vtkSinglePassSimpleVolumeMapper.h vtkTransferControlPoint.h
     vtkVector4d.h)
-set(_srcs vtkSinglePassSimpleVolumeMapper.cxx GLSLShader.cxx)
+set(vtkVolume_SRCS vtkSinglePassSimpleVolumeMapper.cxx GLSLShader.cxx)
 
-add_library(vtkVolume ${_headers} ${_srcs})
-target_link_libraries(vtkVolume GLEW)
+include(module.cmake)
+vtk_module_library(${PROJECT_NAME} ${vtkVolume_SRCS})
+
+target_link_libraries(${PROJECT_NAME} LINK_PRIVATE ${GLEW_LIBRARY})
