Added custom rule to copy shaders to the build tree

--- a/Apps/volvis/CMakeLists.txt
+++ b/Apps/volvis/CMakeLists.txt
@@ -1,3 +1,5 @@
+project(volvis)
+
 set(VOLVIS_SRCS volvis.cxx)
 
 add_executable(volvis  "${VOLVIS_SRCS}")
@@ -13,3 +15,10 @@ target_link_libraries(volvis
   vtkTestingRendering vtkFiltersSources vtksys vtkIOLegacy
   vtkVolume
 )
+
+add_custom_command(OUTPUT "${volvis_BINARY_DIR}/shaders"
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   "${volvis_SOURCE_DIR}/shaders" "${volvis_BINARY_DIR}/shaders")
+add_custom_target(copy_shaders ALL DEPENDS "${volvis_BINARY_DIR}/shaders")
+
+add_dependencies(volvis copy_shaders)
